fjord-compiler/test/errors/uniqueness/Frugal.fj
module errors.uniqueness.Frugal

record Message
  content : String


frugal : Message -* (Message, Message)
frugal m =
  (m, m)

